# gcp-data-platform-demo

./: .coverage  README.md  pyproject.toml  setup.py
config/: salesforce_cdc_config.yaml  salesforce_config.yaml
docs/: batch_pipeline.md  cdc_pipeline.md
infrastructure/: data_pipeline.tf  dataform.tf  dataplex.tf  main.tf  prod.tfvars  provider.tf  salesforce.tf  variables.tf
memory-bank/core/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pipelines/: basic_pubsub_to_bigquery.py  salesforce_batch_extract.py  salesforce_streaming_cdc.py
pipelines/utils/: __init__.py  cdc_event_parser.py  cdc_validators.py  scd_type2_handler.py
scripts/: deploy.sh  deploy_batch_pipeline.sh  deploy_cdc_pipeline.sh
src/: __init__.py
src/salesforce/: __init__.py  api_client.py  cdc_event_simulator.py  cdc_publisher.py  data_generator.py  schemas.py
tests/: conftest.py
tests/unit/: test_cdc_event_parser.py  test_cdc_event_simulator.py  test_cdc_publisher.py  test_cdc_validators.py  test_salesforce_batch_pipeline.py  test_salesforce_data_generator.py  test_scd_type2_handler.py
